# Vision

./: .env.example  .gitignore  AGENT.md  README.md  config.toml  pyproject.toml
tests/: fakes.py  test_brain.py  test_claude_code.py  test_hands.py  test_heartbeat.py  test_memory.py  test_rails.py  test_voice.py
vision/: __init__.py  __main__.py  app.py  config.py
vision/core/: __init__.py  agent.py  conversation.py  errors.py
vision/heartbeat/: __init__.py  checks.py  loop.py  quiet.py  sink.py  state.py
vision/memory/: __init__.py  store.py
vision/rails/: __init__.py  audit.py  cost.py  gate.py  injection.py  killswitch.py
vision/seams/: __init__.py
vision/seams/provider/: __init__.py  anthropic.py  base.py
vision/seams/stt/: base.py  deepgram.py
vision/seams/tts/: __init__.py  base.py  elevenlabs.py
vision/tools/: __init__.py  claude_code.py  edit_file.py  memory_tools.py  read_file.py  registry.py  reminders.py
vision/ui/: __init__.py  repl.py
vision/voice/: __init__.py  chunker.py  launch.py  mic.py  playback.py  ptt.py  session.py
